--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 .right{
     background: #b11b20;
     width:100%;
-    min-width:600px;
+    min-width:650px;
     min-height: 100vh;
     display:flex;
     flex-direction: column;
@@ -76,7 +76,7 @@ form{
     margin-left:75px;
     margin-bottom:70px;
     padding:0;
-    font-size:3em;
+    font-size:3.4em;
     color: white;
 }
 
@@ -85,12 +85,13 @@ label{
     left:0;
     transform-origin: 0;
     transition: transform 0.15s ease-in;
+    font-size:1.2em;
+    white-space: nowrap;
 }
 
 input{
-    width:150px;
+    width:250px;
     height:1.5em;
-    font-size:1em;
     margin-bottom:40px;
     border:0;
     background:#b11b20;
@@ -121,6 +122,7 @@ input::placeholder{
     display:flex;
     width:200px;
     height:30px;
+    font-weight:bold;
     border-radius:5px;
     margin-left:75px;
     background-color: peachpuff;
