--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ input::placeholder{
     display:flex;
     width:200px;
     height:30px;
-    font-weight:bold;
+    font-weight:bolder;
     border-radius:5px;
     margin-left:75px;
     background-color: peachpuff;
